--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qDcL85keyR" once="menu" id="menu1-u" data-rv-view="1638">
+<section class="menu cid-qDcL85keyR" once="menu" id="menu1-u" data-rv-view="1766">
 
     
 
@@ -43,10 +43,10 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="#top">HOOFDPAGINA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;VOORONDERZOEK &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html#content4-4n">PROCES &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html#content4-4y">
-                        CONCEPT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html#content4-54">
-                        EINDPRODUCT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html#content4-57">
-                        TEAMLEDEN &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li>
+            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="#top">&nbsp; &nbsp; &nbsp;HOOFDPAGINA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Vooronderzoek.html#content4-4f">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;VOORONDERZOEK &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html#content4-4n">PROCES &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html#content4-4y">
+                        CONCEPT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html#content4-54">
+                        EINDPRODUCT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html#content4-57">
+                        TEAMLEDEN &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page6.html#info2-5g">CONTACT</a>
                 </li></ul>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="header12 cid-qCAs6O005L mbr-fullscreen mbr-parallax-background" id="header12-3" data-rv-view="1640">
+<section class="engine"><a href="https://mobirise.co/a">website builder</a></section><section class="header12 cid-qCAs6O005L mbr-fullscreen mbr-parallax-background" id="header12-3" data-rv-view="1768">
 
     
 
