--- a/page7.html
+++ b/page7.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Home</title>
+  <title>Page 7</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qDcL85keyR" once="menu" id="menu1-u" data-rv-view="2194">
+<section class="menu cid-qFGjf0gUqG" once="menu" id="menu1-5i" data-rv-view="2323">
 
     
 
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">site creator</a></section><section class="header12 cid-qCAs6O005L mbr-fullscreen mbr-parallax-background" id="header12-3" data-rv-view="2196">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="header12 cid-qFGjf0ZVwc mbr-fullscreen mbr-parallax-background" id="header12-5j" data-rv-view="2325">
 
     
 
