--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 </head>
 <body>
-<section class="menu cid-qDcL85keyR" once="menu" id="menu1-u" data-rv-view="3194">
+<section class="menu cid-qDcL85keyR" once="menu" id="menu1-u" data-rv-view="3710">
 
     
 
@@ -43,10 +43,10 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">&nbsp;HOOFDPAGINA &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Vooronderzoek.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;VOORONDERZOEK &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">PROCES &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
-                        CONCEPT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
-                        EINDPRODUCT &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html">
-                        TEAMLEDEN &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li>
+            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html">&nbsp;HOOFDPAGINA<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="Vooronderzoek.html">VOORONDERZOEK<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page2.html">PROCES</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page3.html">
+                        CONCEPT</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page4.html">
+                        EINDPRODUCT</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="page5.html">
+                        TEAMLEDEN</a></li>
                 <li class="nav-item">
                     <a class="nav-link link text-black display-4" href="page6.html">CONTACT</a>
                 </li></ul>
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="header12 cid-qCAs6O005L mbr-fullscreen mbr-parallax-background" id="header12-3" data-rv-view="3196">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="header12 cid-qCAs6O005L mbr-fullscreen mbr-parallax-background" id="header12-3" data-rv-view="3712">
 
     
 
